add image of an elephant

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <title>My first webpage!</title>
 </head>
+
 <body>
- <h1>My First webpage</h1> 
+  <h1>My First webpage</h1> 
   <h2>Written with a little guidance from Moringa School</h2>
 
   <p>Hello,world!</p>
@@ -17,5 +19,8 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
   </ul>
+  <img src="images/elephants.jpg" alt="photo of an elephant">
+
 </body>
+
 </html>
