--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,7 +1,7 @@
 !DOCTYPE html>
 <html>
 <head>
-
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   These are my favorite things!
